	(inherited from ConicImp).  There is only one construction
	for them right now: Construct the conic arc with given endpoints,
	a "through" point and the conic center.
	Projective transformations are implemented and a circular arc
	can now be transformed with a generic affine or projective
	transformation.
	Three properties are implemented: supporting conic, first end-point
	and second end-point.

2005-09-29  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Fix drawing of arcs with very small angle (patch by
	F. Pasquarelli).

2005-09-27  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Imported PyKig, and made install as a binary script.

2005-09-16  Pino Toscano <toscano.pino@tiscali.it>

	* Move a text label by (2,2), so the attached ones should be less
	sticky to the "parent" object.

2005-09-08  Pino Toscano <toscano.pino@tiscali.it>

	* Fix two bugs, patch by Maurizio Paolini.

2005-09-02  Pino Toscano <toscano.pino@tiscali.it>

	* Slightly change in the text when asking for the results of a
	macro: tell the user that a macro can construct more than one
	object per time.

2005-08-25  Inge Wallin <inge@lysator.liu.se>

	* Fix bug 111452: Code violates C++ spec with improper const and
	iterator declarations.

2005-08-15  Pino Toscano <toscano.pino@tiscali.it>

	* Bump the version to 0.10.5 (I don't think to have enough stuff
	to have a 0.11 version - at least at the moment).

	* Small changes in the credits, putting me as maintainer.

	* Small update in the TODO.

	* Avoid setting empty captions in the KigFileDialog.

	* Update a bit one tip.

	* Add apidox comments for two classes.

2005-07-30  Pino Toscano <toscano.pino@tiscali.it>

	* With the help of the kde-usability team, I've refactored the Kig
	exporter dialogs. These new ones are more usable than the previous
	ones, more simply and more maintainable. This could make us
	closing bug #101072.

2005-07-25  Pino Toscano <toscano.pino@tiscali.it>

	* Apidox improvements.
